# github-actions-test

./: MultiplicationTable.java  README.md  hello.cpp
.github/workflows/: main.yml  manual.yml
OBLIGE/: my_config.txt  oblige.patch
cmake/: CMakeLists.txt  three.cpp  two.cpp
